# quadrotor-stack

./: .gitignore  README.md  requirements.txt
.github/workflows/: autopep8.yml  ros_ci.yml
PPO_quadrotor_tensorboard/DDPG_1/: events.out.tfevents.1703410258.vectorGP76.151232.0
PPO_quadrotor_tensorboard/PPO_1/: events.out.tfevents.1703362688.vectorGP76.5609.0  events.out.tfevents.1705075847.vectorGP76.971972.0
PPO_quadrotor_tensorboard/PPO_10/: events.out.tfevents.1705081190.vectorGP76.1199430.0
PPO_quadrotor_tensorboard/PPO_11/: events.out.tfevents.1705081214.vectorGP76.1200282.0
PPO_quadrotor_tensorboard/PPO_12/: events.out.tfevents.1705081253.vectorGP76.1201744.0
PPO_quadrotor_tensorboard/PPO_13/: events.out.tfevents.1705081303.vectorGP76.1205224.0
PPO_quadrotor_tensorboard/PPO_14/: events.out.tfevents.1705081584.vectorGP76.7188.0
PPO_quadrotor_tensorboard/PPO_15/: events.out.tfevents.1705081743.vectorGP76.15173.0
PPO_quadrotor_tensorboard/PPO_16/: events.out.tfevents.1705082052.vectorGP76.26225.0
PPO_quadrotor_tensorboard/PPO_17/: events.out.tfevents.1705082069.vectorGP76.26671.0
PPO_quadrotor_tensorboard/PPO_18/: events.out.tfevents.1705082108.vectorGP76.27475.0
PPO_quadrotor_tensorboard/PPO_19/: events.out.tfevents.1705082146.vectorGP76.29957.0
PPO_quadrotor_tensorboard/PPO_2/: events.out.tfevents.1703362765.vectorGP76.5960.0  events.out.tfevents.1705075934.vectorGP76.974967.0
PPO_quadrotor_tensorboard/PPO_20/: events.out.tfevents.1705082246.vectorGP76.35605.0
PPO_quadrotor_tensorboard/PPO_3/: events.out.tfevents.1703365978.vectorGP76.9948.0  events.out.tfevents.1705077090.vectorGP76.1020881.0
PPO_quadrotor_tensorboard/PPO_4/: events.out.tfevents.1703409005.vectorGP76.148695.0  (+1 more)
RL/: train_sb.py
airsim/: flight.py  run_env.sh  settings.json  settings.json.old
docker/: Dockerfile
docs/: ardrone_mocap.md
media/: dataset_testing_method_1.drawio  dataset_testing_method_2.drawio  modeling.drawio  simulation.drawio  system_real.drawio  system_simulation.drawio
src/quadrotor_dashboard/: package.xml  plugin.xml  plugin_publish_waypoints.xml  setup.cfg  setup.py
src/quadrotor_dashboard/quadrotor_dashboard/: main.py  plan_command.py  plan_command_plugin.py  plugin_publish_waypoints.py  quadrotor_image_visualizer.py  quadrotor_model_errors_visualizer.py  quadrotor_path_visualizer.py
src/quadrotor_dashboard/resource/: plan_command.ui  plugin_publish_waypoints.ui  publish_plan_command.ui
src/quadrotor_dashboard/resource/rviz/: ardrone.rviz
src/quadrotor_dashboard/resource/waypoints/: 2023_09_20.csv  2023_11_10.csv
src/quadrotor_simulation/: package.xml  setup.cfg  setup.py
src/quadrotor_simulation/launch/: quadrotor_simulation.launch.py
src/quadrotor_simulation/meshes/: hoop.dae  hoop.stl
src/quadrotor_simulation/models/: 64_124_64_dict.pt  64_124_64_params.pt
src/quadrotor_simulation/quadrotor_simulation/: __init__.py  quadrotor_airsim.py  quadrotor_imu.py  quadrotor_pybullet.py  quadrotor_pybullet_camera.py  quadrotor_pybullet_dataset.py  quadrotor_pybullet_physics.py  quadrotor_residuals.py  quadrotor_wind.py
src/quadrotor_simulation/quadrotor_simulation/RL/: envs.py
src/quadrotor_simulation/quadrotor_simulation/RL/envs/: __init__.py  _base.py  _wrappers.py
src/quadrotor_simulation/quadrotor_simulation/core/: bullet.py  physics.py
src/quadrotor_simulation/quadrotor_simulation/modeling/: core.py  nets.py  nominal.py  nominalNN.py  types.py
src/quadrotor_simulation/world/: block.urdf  block.urdf.xacro  hoop.urdf.xacro
src/quadrotor_trajectory_generation/: package.xml  setup.cfg  setup.py
src/quadrotor_trajectory_generation/quadrotor_trajectory_generation/: quadrotor_poly_optimizer.new.py  quadrotor_poly_optimizer.py  quadrotor_poly_optimizer_new.py  quadrotor_reference_publisher.py  trajectory_optimizer.py
src/quadrotor_trajectory_generation/tests/: _test_trajectory_optimizer.py
(+167 files in other folders)
