<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>quadrotor_simulation</name>
  <version>0.0.0</version>
  <description>Quadrotor simulation that include different simulators</description>
  <maintainer email="zein.barhoum799@gmail.com">Zein Alabedeen Barhoum</maintainer>
  <license>TODO: License declaration</license>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>quadrotor_interfaces</depend>
  <depend>quadrotor_utils</depend>
  <depend>cv_bridge</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
