<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrotor_trajectory_generation</name>
  <version>0.0.0</version>
  <description>Package for quadrotor trajectory generation and reference publishing</description>
  <maintainer email="zein.barhoum799@gmail.com">Zein Alabedeen Barhoum</maintainer>
  <license>MIT</license>

  <depend>casadi-pip</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-yaml</depend>
  <depend>quadrotor_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
